# python-project-83

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: actions.yml
page_analyzer/: __init__.py  app.py
page_analyzer/templates/: index.html
